syntax="proto3";

option go_package = "github.com/miiy/goc/component/user/api/v1;user";
option java_multiple_files = true;
option java_outer_classname = "UserProto";
option java_package = "com.github.miiy.goc.component.user.api.v1";

package goc.user.api.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/api/field_behavior.proto";

message User {
  enum UserStatus {
    DEFAULT = 0;
    ACTIVE = 1;
    DISABLE = 2;
  }
  int64 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string email_verified_time = 5;
  string phone = 6;
  UserStatus status = 7;
  google.protobuf.Timestamp create_time = 8;
  google.protobuf.Timestamp update_time = 9;
  google.protobuf.Timestamp delete_time = 10;
}

message GetUserRequest {
  int64 id = 1 [(google.api.field_behavior) = REQUIRED];
}

service UserService {
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1/user/{id}"
    };
  }
}
